# Estudos

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/application/: dtos.py
app/application/use_cases/: ask_inventory_agent.py  generate_content.py
app/domain/: entities.py  exceptions.py  ports.py
app/infrastructure/: config.py
app/infrastructure/ai/: client_factory.py  gemini_content_generator.py  gemini_inventory_agent.py
app/infrastructure/persistence/: in_memory_conversation_repository.py  static_inventory_repository.py
app/presentation/api/: app.py  dependencies.py  schemas.py
app/presentation/api/routers/: content.py  health.py  inventory.py
docs/: ARQUITETURA.md  MAIS_CONCEITOS_PYTHON.md  PASSO_A_PASSO_ENDPOINT.md  PYTHON_PARA_DEV_CSHARP.md  README.md
tests/: conftest.py  fakes.py
tests/integration/: test_api.py
tests/unit/: test_domain.py  test_repositories.py  test_use_cases.py
